<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dephead_menuProfile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/dephead_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/base_nav_products"
            android:icon="@drawable/ic_summary"
            android:title="@string/product" />

        <!--Hide Sub Menu starts-->

        <item android:id="@+id/base_nav_product_catalogue"
            android:title="@string/product_catalogue"
            android:visible="false" />

        <!--Hide Sub Menu ends-->

        <item
            android:id="@+id/base_nav_forms"
            android:icon="@drawable/ic_summary"
            android:title="@string/forms" />

        <!--Hide Sub Menu starts-->

        <item android:id="@+id/base_nav_requisitionSummary"
            android:title="@string/requisition_summary"
            android:visible="false" />
        <!--Hide Sub Menu ends-->
        <item
            android:id="@+id/dephead_delegations"
            android:icon="@drawable/ic_summary"
            android:title="@string/delegation" />
        <!--Hide Sub Menu starts-->
        <item
            android:id="@+id/dephead_delegationSummary"
            android:title="@string/delegation_summary"
            android:visible="false"/>
        <item
            android:id="@+id/dephead_delegateDepRep"
            android:title="@string/assign_dep_rep"
            android:visible="false"/>
        <item
            android:id="@+id/dephead_DelegateDepHead"
            android:title="@string/delegate_dep_head"
            android:visible="false"/>

        <!--Hide Sub Menu ends-->

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>

    </group>

</menu>
