<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/base_nav_Profile"
            android:icon="@drawable/ic_profile"
            android:title="Profile"/>

        <item
            android:id="@+id/base_nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="Dashboard" />

        <item
            android:id="@+id/base_nav_product_catalogue"
            android:title="@string/product_catalogue"
            android:visible="false"/>
        <item
            android:id="@+id/storeclerk_Inventory"
            android:title="@string/inventory"
            android:visible="false"/>
        <item
            android:id="@+id/storemanager_directory"
            android:icon="@drawable/ic_summary"
            android:title="@string/directory" />
        <item
            android:id="@+id/storemanager_department"
            android:title="@string/department"
            android:visible="false"/>

        <item
            android:id="@+id/storemanager_supplier"
            android:title="@string/supplier"
            android:visible="false"/>
        <item
            android:id="@+id/forms"
            android:icon="@drawable/ic_summary"
            android:title="@string/forms" />
        <item
            android:id="@+id/storeclerk_StationeryRetrievalSummary"
            android:title="@string/sr_summary"
            android:visible="false"/>
        <item
            android:id="@+id/base_nav_DFSummary"
            android:title="@string/disbursement_summary"
            android:visible="false"/>
        <item
            android:id="@+id/storeclerk_CreateStationeryRetrieval"
            android:title="@string/create_sr"
            android:visible="false"/>

        <item
            android:id="@+id/storeclerk_CreateDisbursement"
            android:title="@string/create_disbursement"
            android:visible="false"/>


        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>

    </group>

</menu>