<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/storeclerk_menuProfile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile">
        </item>

        <item
            android:id="@+id/storeclerk_Dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard">
        </item>

        <item
            android:id="@+id/storeclerk_Requisitions"
            android:icon="@drawable/ic_summary"
            android:title="Requisitions">
        </item>

        <item android:title="AA" android:id="@+id/AA" android:visible="false"></item>
        <item android:title="BB" android:id="@+id/BB" android:visible="false"></item>

        <item
            android:id="@+id/storeclerk_StationeryRetrievals"
            android:icon="@drawable/ic_summary"
            android:title="Stationery Retrievals" />

        <item
            android:id="@+id/storeclerk_Disbursements"
            android:icon="@drawable/ic_person"
            android:title="Disbursements"/>

        <item
            android:id="@+id/storeclerk_Others"
            android:icon="@drawable/ic_person"
            android:title="Others"/>

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>

</menu>
