<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:fillViewport="true"
    app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <Button
            android:id="@+id/view_pending_req"
            android:layout_width="match_parent"
            android:layout_height="173dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            app:layout_goneMarginLeft="30dp"
            android:background="@drawable/bg2"
            android:text="@string/view_pending_requisitions"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/view_processed_req"
            android:layout_width="match_parent"
            android:layout_height="173dp"
            app:layout_constraintTop_toBottomOf="@+id/view_pending_req"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bg3"
            android:text="@string/view_processed_requisitions"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/create_req"
            android:layout_width="match_parent"
            android:layout_height="173dp"
            app:layout_constraintTop_toBottomOf="@+id/view_processed_req"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bg1"
            android:text="@string/create_requisition"
            android:textColor="#ffffff"
            android:textSize="24sp" />

</androidx.constraintlayout.widget.ConstraintLayout>